// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render a medium spinner with tertiary color 1`] = `
.c0 {
  display: inline-block;
  width: 1.5rem;
  height: 1.5rem;
  border: 2px solid;
  border-radius: 50%;
  border-top-color: #161B20;
  -webkit-animation: spin 1s ease-in-out infinite;
  animation: spin 1s ease-in-out infinite;
  -webkit-animation: spin 1s ease-in-out infinite;
}

<div
  class="c0"
  color="#494949"
  data-testid="spinner"
/>
`;

exports[`Switch should render a small spinner with default color 1`] = `
.c0 {
  display: inline-block;
  width: 1rem;
  height: 1rem;
  border: 2px solid;
  border-radius: 50%;
  border-top-color: #161B20;
  -webkit-animation: spin 1s ease-in-out infinite;
  animation: spin 1s ease-in-out infinite;
  -webkit-animation: spin 1s ease-in-out infinite;
}

<div
  class="c0"
  color="#161B20"
  data-testid="spinner"
/>
`;
